; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/crypto/extr_ap_bus.c_ap_reset_queue.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/crypto/extr_ap_bus.c_ap_reset_queue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ap_queue_status = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @ap_reset_queue to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ap_reset_queue(i32 %0) #0 {
  %2 = alloca %struct.ap_queue_status, align 4
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i32 %0, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = sext i32 %6 to i64
  %8 = or i64 %7, 16777216
  store i64 %8, i64* %4, align 8
  store i64 0, i64* %5, align 8
  %9 = load i64, i64* %4, align 8
  %10 = load i64, i64* %5, align 8
  %11 = call { i64, i32, i64 } asm sideeffect ".long 0xb2af0000", "={ax},={dx},={cx},0,2,~{cc},~{dirflag},~{fpsr},~{flags}"(i64 %9, i64 %10) #1, !srcloc !2
  %12 = extractvalue { i64, i32, i64 } %11, 0
  %13 = extractvalue { i64, i32, i64 } %11, 1
  %14 = extractvalue { i64, i32, i64 } %11, 2
  store i64 %12, i64* %4, align 8
  %15 = bitcast %struct.ap_queue_status* %2 to i32*
  store i32 %13, i32* %15, align 4
  store i64 %14, i64* %5, align 8
  %16 = getelementptr inbounds %struct.ap_queue_status, %struct.ap_queue_status* %2, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  ret i32 %17
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
!2 = !{i32 468}
